--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<ion-content [fullscreen]="true">
+<ion-content>
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
     <ion-fab-button (click)="scanQrCode()">
       <ion-icon name="camera"></ion-icon>
