--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,21 +1,12 @@
-<form [formGroup]="form">
-  <fieldset>
-    <legend>Register</legend>
-    <div class="form-field">
-      <label>Nom:</label>
-      <input name="email" formControlName="email">
-    </div>
-    <div class="form-field">
-      <label>Email:</label>
-      <input name="email" formControlName="email">
-    </div>
-    <div class="form-field">
-      <label>Mot de passe:</label>
-      <input name="password" formControlName="password"
-             type="password">
-    </div>
-  </fieldset>
-  <div class="form-buttons">
-    <button class="button button-primary" (click)="register()">Valider</button>
-  </div>
-</form>
+<ion-content class="ion-padding">
+  <form [formGroup]="form">
+    <ion-label>Email:</ion-label>
+    <ion-input name="email" formControlName="email"></ion-input>
+    <ion-label>Name:</ion-label>
+    <ion-input name="name" formControlName="name"></ion-input>
+    <ion-label>Password:</ion-label>
+    <ion-input name="password" formControlName="password"
+               type="password"></ion-input>
+    <ion-button class="button button-primary" (click)="register()">Valider</ion-button>
+  </form>
+</ion-content>
