fixed error dependence and minor error

--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,3 +1,21 @@
-<p>
-  detail works!
-</p>
+<ion-header translucent>
+  <ion-toolbar>
+    <ion-title>Card</ion-title>
+  </ion-toolbar>
+</ion-header>,
+<ion-content fullscreen class="ion-align-items-center,ion-justify-content-center">
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title> <ion-label color="primary">{{ (qrCode$|async).name}}</ion-label></ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <div class="ion-text-start">
+        <p>Date limite: {{ (qrCode$|async).date|date}}.</p>
+      </div>
+      <div class="ion-text-start" >
+        <p>Description: {{ (qrCode$|async).description}}</p>
+      </div>
+    </ion-card-content>
+    <img src="https://www.avise-info.fr/sites/default/files/code_barre.png" />
+  </ion-card>
+</ion-content>
