--- a/src/app/historic/historic.component.html
+++ b/src/app/historic/historic.component.html
@@ -1,12 +1,14 @@
 <ion-content>
   <ion-item *ngFor="let qrCode of historicQrCode">
-    <ion-avatar slot="start">
-      <img src="{{ (qrCode|async).brand}}">
+    <ion-router-link href='detail/+{{qrCode.brand}}'>
+    <ion-avatar class="ion-" slot="start">
+      <img src="" alt="code barre">
     </ion-avatar>
     <ion-label>
-      <h2>Finn</h2>
-      <h3>I'm a big deal</h3>
-      <p>Listen, I've had a pretty messed up day...</p>
+      <h2>{{qrCode.brand}}</h2>
+      <h3>{{qrCode.validUntil}}</h3>
+      <p>{{qrCode.description}}</p>
     </ion-label>
+    </ion-router-link>
   </ion-item>
 </ion-content>
