--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,4 +7,16 @@
              type="password"></ion-input>
       <ion-button class="button button-primary" (click)="login()">Connexion</ion-button>
   </form>
+  <form class="example-form">
+    <mat-form-field class="example-full-width">
+      <mat-label>Favorite food</mat-label>
+      <input matInput placeholder="Ex. Pizza" value="Sushi">
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width">
+      <mat-label>Leave a comment</mat-label>
+      <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
+    </mat-form-field>
+  </form>
+
 </ion-content>
