--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,23 @@
 <ion-content class="ion-padding">
-  <form [formGroup]="form">
-      <ion-label>Email:</ion-label>
-      <ion-input name="email" formControlName="email"></ion-input>
-      <ion-label>Password:</ion-label>
-      <ion-input name="password" formControlName="password"
-             type="password"></ion-input>
-      <ion-button class="button button-primary" (click)="login()">Connexion</ion-button>
-  </form>
-  <form class="example-form">
-    <mat-form-field class="example-full-width">
-      <mat-label>Favorite food</mat-label>
-      <input matInput placeholder="Ex. Pizza" value="Sushi">
-    </mat-form-field>
+  <ion-title class="text-center">Connexion</ion-title>
+  <ion-row class='ion-text-center'>
+        <form [formGroup]="form">
+          <div class="ion-padding">
+            <mat-form-field class="">
+              <mat-label>email</mat-label>
+              <input matInput value="Sushi" name="email" formControlName="email">
+            </mat-form-field>
 
-    <mat-form-field class="example-full-width">
-      <mat-label>Leave a comment</mat-label>
-      <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
-    </mat-form-field>
-  </form>
+            <mat-form-field class="example-full-width">
+              <mat-label>Password</mat-label>
+              <input matInput name="password" formControlName="password" type="password">
+            </mat-form-field>
+          </div>
 
+          <div class="row ion-margin-bottom">
+            <ion-button class="ion-padding" mat-raised-button color="primary" (click)="login()">Connexion</ion-button>
+          </div>
+          <ion-text class="ion-padding" mat-raised-button color="primary">S'inscrire</ion-text>
+        </form>
+  </ion-row>
 </ion-content>
