--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <ion-menu side="start" menuId="first" contentId="main">
   <ion-header>
-    <ion-toolbar color="primary">
+    <ion-toolbar color="primary" class="ion-padding">
       <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
@@ -13,10 +13,10 @@
     </ion-list>
   </ion-content>
 </ion-menu>
-
 <ion-router-outlet id="main"></ion-router-outlet>
-
-<ion-toolbar color="primary">
-  <ion-icon size="large" name="menu-outline" (click)="openMenu()"></ion-icon>
-  <ion-title slot="primary" class="ion-justify-content-center">{{pageName}}</ion-title>
-</ion-toolbar>
+<ion-header>
+<!--  <ion-toolbar color="primary">-->
+<!--    <ion-icon size="large" name="menu-outline" (click)="openMenu()"></ion-icon>-->
+<!--    <ion-title slot="primary" class="ion-justify-content-center">{{pageName}}</ion-title>-->
+<!--  </ion-toolbar>-->
+</ion-header>
