--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,23 +1,33 @@
-<ion-content class="ion-padding">
-  <ion-title class="text-center">Connexion</ion-title>
-  <ion-row class='ion-text-center'>
+<ion-content class="ion-padding" color="primary">
     <form [formGroup]="form">
-      <div class="ion-padding">
-        <mat-form-field class="">
-          <mat-label>email</mat-label>
-          <input matInput value="Sushi" name="email" formControlName="email">
-        </mat-form-field>
+      <ion-grid>
+        <ion-row color="primary"  class="ion-justify-content-center ion-align-items-center">
+          <ion-col  class="ion-align-self-center" size-md="6" size-lg="5" size-xs="12">
+            <ion-title class="ion-text-center ion-padding">Connexion</ion-title>
+            <div class="ion-padding">
+              <ion-item class="roundedInput">
 
-        <mat-form-field class="example-full-width">
-          <mat-label>Password</mat-label>
-          <input matInput name="password" formControlName="password" type="password">
-        </mat-form-field>
-      </div>
+              <ion-input name="email" formControlName="email" placeholder="Email"></ion-input>
+              </ion-item>
+              <ion-item class="roundedInput">
 
-      <div class="row ion-margin-bottom">
-        <ion-button class="ion-padding" mat-raised-button color="primary" (click)="login()">Connexion</ion-button>
-      </div>
-      <ion-text class="ion-padding" mat-raised-button color="primary">S'inscrire</ion-text>
+                <ion-input name="password" formControlName="password" placeholder="Mot de passe"></ion-input>
+              </ion-item>
+            </div>
+              <div class="ion-padding">
+                <ion-row class="ion-text-center">
+                  <ion-col>
+                    <ion-button size="large"  mat-raised-button color="light" (click)="login()">Connexion</ion-button>
+                  </ion-col>
+                </ion-row>
+              </div>
+              <ion-row class="ion-text-center">
+                <ion-col>
+                  <ion-router-link color="light" href="register"><ion-text class="large" mat-raised-button color="light">Pas de compte ? S'inscrire</ion-text></ion-router-link>
+                </ion-col>
+              </ion-row>
+          </ion-col>
+          </ion-row>
+      </ion-grid>
     </form>
-  </ion-row>
 </ion-content>
