--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,22 +1,26 @@
 <ion-menu side="start" menuId="first" contentId="main">
   <ion-header>
-    <ion-toolbar color="primary" class="ion-padding">
+    <ion-toolbar color="light">
       <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content>
     <ion-list>
-      <ion-item><ion-router-link color="primary" href="">Profile</ion-router-link></ion-item>
-      <ion-item><ion-router-link color="primary" href="home">Scan</ion-router-link></ion-item>
-      <ion-item><ion-router-link color="primary" href="">Historique</ion-router-link></ion-item>
-      <ion-item><ion-router-link color="primary" href="">Deconnexion</ion-router-link></ion-item>
+      <div *ngIf="checkLogin;else elseBlock">
+        <ion-item><ion-router-link color="primary" href="home">Scan</ion-router-link></ion-item>
+        <ion-item><ion-router-link color="primary" href="historic">Historique</ion-router-link></ion-item>
+        <ion-item><ion-router-link color="primary" (clic)="logout()">Deconnexion</ion-router-link></ion-item>
+      </div>
+      <ng-template #elseBlock>
+        <ion-item><ion-router-link color="primary" href="login">Connexion</ion-router-link></ion-item>
+      </ng-template>
     </ion-list>
   </ion-content>
 </ion-menu>
 <ion-router-outlet id="main"></ion-router-outlet>
 <ion-header>
-<!--  <ion-toolbar color="primary">-->
-<!--    <ion-icon size="large" name="menu-outline" (click)="openMenu()"></ion-icon>-->
-<!--    <ion-title slot="primary" class="ion-justify-content-center">{{pageName}}</ion-title>-->
-<!--  </ion-toolbar>-->
+  <ion-toolbar color="light">
+    <ion-icon size="large" name="menu-outline" (click)="openMenu()"></ion-icon>
+    <ion-title slot="primary" class="ion-justify-content-center">{{pageName}}</ion-title>
+  </ion-toolbar>
 </ion-header>
