--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,20 +1,35 @@
-<ion-content fullscreen class="ion-align-items-center,ion-justify-content-center">
-  <ion-card *ngIf="(qrCode$ | async) as coupon; else couponNotFound">
-    <ion-card-header>
-      <ion-card-title> <ion-label color="primary">{{ (qrCode$|async).brand}}</ion-label></ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <div class="ion-text-start">
-        <p>Date limite: {{ (qrCode$|async).validUntil|date}}.</p>
-      </div>
-      <div class="ion-text-start" >
-        <p>Description: {{ (qrCode$|async).description}}</p>
-      </div>
-    </ion-card-content>
-    <img src="{{ (qrCode$|async).coupon}}"/>
-  </ion-card>
-  <ng-template #couponNotFound>
-      Impossible d'accéder au coupon
-  </ng-template>
+<app-nav-bar></app-nav-bar>
+<ion-content class="ion-padding" color="primary">
+    <ion-grid>
+      <ion-row color="primary" class="ion-align-items-center">
+        <ion-col  class="ion-align-self-center" size-md="6" size-lg="5" size-xs="12">
+          <ion-card *ngIf="(qrCode$ | async) as coupon; else couponNotFound">
+            <ion-card-header class ="ion-text-center">
+               <ion-title color="primary" class=".ion-text">{{ (qrCode$|async).brand}}</ion-title>
+            </ion-card-header>
+            <ion-card-content>
+              <div class="ion-text-start">
+                <p>Date limite: {{ (qrCode$|async).validUntil|date}}.</p>
+              </div>
+              <div class="ion-text-start" >
+                <p>Description: {{ (qrCode$|async).description}}</p>
+              </div>
+            </ion-card-content>
+            <ion-row class ="ion-text-center">
+              <ion-col>
+                <img src="{{ (qrCode$|async).coupon}}"/>
+              </ion-col>
+            </ion-row>
+          </ion-card>
+          <ng-template #couponNotFound>
+            <ion-card>
+              <ion-card-title> Coupon introuvable </ion-card-title>
+              <ion-content></ion-content>
+              Impossible d'accéder au coupon
+            </ion-card>
 
+          </ng-template>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
 </ion-content>
