--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,12 +1,34 @@
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" color="primary">
   <form [formGroup]="form">
-    <ion-label>Email:</ion-label>
-    <ion-input name="email" formControlName="email"></ion-input>
-    <ion-label>Name:</ion-label>
-    <ion-input name="name" formControlName="name"></ion-input>
-    <ion-label>Password:</ion-label>
-    <ion-input name="password" formControlName="password"
-               type="password"></ion-input>
-    <ion-button class="button button-primary" (click)="register()">Valider</ion-button>
+    <ion-grid>
+      <ion-row color="primary"  class="ion-justify-content-center">
+        <ion-col  class="ion-align-self-center" size-md="6" size-lg="5" size-xs="12">
+          <ion-title class="ion-text-center ion-padding">Crée un compte</ion-title>
+          <div class="ion-padding">
+            <ion-item>
+              <ion-input name="name" formControlName="Nom" placeholder="Nom"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-input name="email" formControlName="email" placeholder="Email"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-input name="password" formControlName="password" placeholder="Mot de passe"></ion-input>
+            </ion-item>
+          </div>
+          <div class="ion-padding">
+            <ion-row class="ion-text-center">
+              <ion-col>
+                <ion-button size="large"  mat-raised-button color="light" (click)="register()">Valider</ion-button>
+              </ion-col>
+            </ion-row>
+          </div>
+          <ion-row class="ion-text-center">
+            <ion-col>
+              <ion-router-link color="light" href="login"><ion-text class="large" mat-raised-button color="light">Déja un compte ? Connexion</ion-text></ion-router-link>
+            </ion-col>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </form>
 </ion-content>
