--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -5,19 +5,19 @@
         <ion-col  class="ion-align-self-center" size-md="6" size-lg="5" size-xs="12">
           <ion-card *ngIf="(qrCode$ | async) as coupon; else couponNotFound">
             <ion-card-header class ="ion-text-center">
-               <ion-title color="primary" class=".ion-text">{{ (qrCode$|async).brand}}</ion-title>
+               <ion-title color="primary" class=".ion-text">{{ coupon.brand}}</ion-title>
             </ion-card-header>
             <ion-card-content>
               <div class="ion-text-start">
-                <p>Date limite: {{ (qrCode$|async).validUntil|date}}.</p>
+                <p>Date limite: {{ coupon.validUntil|date}}.</p>
               </div>
               <div class="ion-text-start" >
-                <p>Description: {{ (qrCode$|async).description}}</p>
+                <p>Description: {{ coupon.description}}</p>
               </div>
             </ion-card-content>
             <ion-row class ="ion-text-center">
               <ion-col>
-                <img src="{{ (qrCode$|async).coupon}}"/>
+                <img src="{{ coupon.coupon}}"/>
               </ion-col>
             </ion-row>
           </ion-card>
@@ -27,7 +27,6 @@
               <ion-content></ion-content>
               Impossible d'accéder au coupon
             </ion-card>
-
           </ng-template>
         </ion-col>
       </ion-row>
