first push, error redirection when the root '**' is available.

--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -7,7 +7,7 @@
       </div>
       <h2>Une erreur est survenue</h2>
       <p>la page que vous recherchez a pu être supprimée si son nom a changé ou est temporairement indisponible.</p>
-      <a href="home">Accueille</a>
+      <ion-router-link color="light" href="home"><ion-button>Retour</ion-button></ion-router-link>
     </div>
   </div>
 </ion-content>
