--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -3,7 +3,7 @@
     <ion-grid>
       <ion-row color="primary"  class="ion-justify-content-center">
         <ion-col  class="ion-align-self-center" size-md="6" size-lg="5" size-xs="12">
-          <ion-title class="ion-text-center ion-padding">Crée un compte</ion-title>
+          <ion-title class="ion-text-center ion-padding">Créer un compte</ion-title>
           <div class="ion-padding">
             <ion-item>
               <ion-input name="name" formControlName="Nom" placeholder="Nom"></ion-input>
