--- a/src/app/user-register/user-register.component.html
+++ b/src/app/user-register/user-register.component.html
@@ -1,24 +1,24 @@
 <ion-content class="ion-padding" color="primary">
-  <form [formGroup]="form">
+  <form [formGroup]="formRegister" (ngSubmit)="register()">
     <ion-grid>
       <ion-row color="primary"  class="ion-justify-content-center">
         <ion-col  class="ion-align-self-center" size-md="6" size-lg="5" size-xs="12">
           <ion-title class="ion-text-center ion-padding">Créer un compte</ion-title>
           <div class="ion-padding">
             <ion-item>
-              <ion-input name="name" formControlName="Nom" placeholder="Nom"></ion-input>
+              <ion-input type="text"  formControlName="name" placeholder="Nom"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input name="email" formControlName="email" placeholder="Email"></ion-input>
+              <ion-input type="email" formControlName="email" placeholder="Email"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input name="password" formControlName="password" placeholder="Mot de passe"></ion-input>
+              <ion-input type="password"  formControlName="password" placeholder="Mot de passe"></ion-input>
             </ion-item>
           </div>
           <div class="ion-padding">
             <ion-row class="ion-text-center">
               <ion-col>
-                <ion-button size="large"  mat-raised-button color="light" (click)="register()">Valider</ion-button>
+                <ion-button size="large" type="submit"  mat-raised-button color="light" (click)="register()">Valider</ion-button>
               </ion-col>
             </ion-row>
           </div>
@@ -32,3 +32,4 @@
     </ion-grid>
   </form>
 </ion-content>
+
