fix error remplace user = username and fix toast

--- a/src/app/user-register/user-register.component.html
+++ b/src/app/user-register/user-register.component.html
@@ -6,8 +6,8 @@
           <ion-title class="ion-text-center ion-padding">Créer un compte</ion-title>
           <div class="ion-padding">
             <ion-item>
-              <span *ngIf="formInputIsRequired('name')" class="required">&#42;</span>
-              <ion-input type="text"  formControlName="name" placeholder="Nom" required></ion-input>
+              <span *ngIf="formInputIsRequired('username')" class="required">&#42;</span>
+              <ion-input type="text"  formControlName="username" placeholder="Nom" required></ion-input>
             </ion-item>
             <ion-item>
               <span *ngIf="formInputIsRequired('email')" class="required">&#42;</span>
